- saving billboard and border checks in config file instead of scene file

0.1.3.0007:
- engine and game can run even if there is no camera
- removed old camera scripts and moved their content to cameraobject and cameracomponent scripts
- engine always creates a scene camera and switches to it by default when scene is opened
- can toggle between scene camera and user-created cameras
- can set player camera in settings window game tab, without this the game will not have an active camera
- qqq console command bypasses save check
- fixed game not printing engine messages to game console
- enable debug console messages by default in engine or game debug version
- improved gameobject save file formatting
- saving scene camera data to scene file only in engine
- delete old gameobject save file if object was renamed in inspector, mark scene as unsaved
- deny changing selected gameobject name to any reserved name used by gameobjects not created by end user
- deny setting imported asset name to any reserved name used by gameobjects not created by end user
- kalaphysics now properly handles wall collisions
- improved console commands system by allowing to easily add any new commands to console in either engine or game source code
- decreased minimum allowed window scale for engine and game
- increased max and decreased min compiler window allowed scale in engine
- returned back to old gameobject.txt for each gameobject txt file name instead of naming each gameobject txt file name as the name of the actual gameobject

0.1.3.0008:
- fixed mesh component height in inspector for empty gameobject
- fixed light component height in inspector for point, spot and directional lights
- added mesh type to mesh component in inspector for all gameobjects
- fixed light type icon not updating correctly if light type was changed from inspector
- fixed light icon type staying after light component was removed from gameobject from inspector